fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval1653032258428743743_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 1
    importance weighted by its maximum dimension's inverse and its proportion to total item weights.}
                                                ^
SyntaxError: unterminated string literal (detected at line 1)
